# live-speed-timer

./: .gitignore  Cargo.toml  README.md  build.release.bat  build.release.sh
.github/workflows/: release.yml
src/: config.rs  main.rs  shutdown.rs  time.rs  timer.rs
